--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <description>admin</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>rest</module>
+    </modules>
+
     <properties>
         <java.version>21</java.version>
         <spring-boot-admin.version>3.3.2</spring-boot-admin.version>
